Merged revisions 1425530 via  svn merge from https://svn.apache.org/repos/asf/cxf/branches/2.6.x-fixes
........
  r1425530 | ay | 2012-12-23 22:32:58 +0100 (Sun, 23 Dec 2012) | 9 lines
  
  Merged revisions 1425528 via  svn merge from
  https://svn.apache.org/repos/asf/cxf/trunk
  
  ........
    r1425528 | ay | 2012-12-23 22:23:27 +0100 (Sun, 23 Dec 2012) | 1 line
    
    [CXF-4723] stax outTransform may generate duplicate ns declarations for global attributes
  ........
  
........


git-svn-id: https://svn.apache.org/repos/asf/cxf/branches/2.5.x-fixes@1425539 13f79535-47bb-0310-9956-ffa450edef68