@@ -24,60 +24,71 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
+import javax.xml.XMLConstants;
 import javax.xml.namespace.NamespaceContext;
 
 class DelegatingNamespaceContext implements NamespaceContext {
-    private List<Map<String, String>> prefixes;
     private NamespaceContext nc;
     private Map<String, String> nsMap;
-    
+    private List<Map<String, String>> namespaces;
+    private List<Map<String, String>> prefixes;
+
     public DelegatingNamespaceContext(NamespaceContext nc, Map<String, String> nsMap) {
         this.nc = nc;
         this.nsMap = nsMap;
-        this.prefixes =  new LinkedList<Map<String, String>>();
-        this.prefixes.add(new HashMap<String, String>());
+        namespaces = new LinkedList<Map<String, String>>();
+        prefixes = new LinkedList<Map<String, String>>();
     }
     
     public void down() {
-        Map<String, String> pm = new HashMap<String, String>();
-        if (prefixes.size() > 0) {
-            pm.putAll(prefixes.get(0));
-        }
-        prefixes.add(0, pm);
+        ((LinkedList<Map<String, String>>)namespaces).addFirst(new HashMap<String, String>(8));
+        ((LinkedList<Map<String, String>>)prefixes).addFirst(new HashMap<String, String>(8));
     }
-    
+
     public void up() {
-        prefixes.remove(0);
+        ((LinkedList<Map<String, String>>)namespaces).removeFirst();
+        ((LinkedList<Map<String, String>>)prefixes).removeFirst();
     }
     
-    public void addPrefix(String prefix, String namespace) {
-        prefixes.get(0).put(namespace, prefix);
+    public void addPrefix(String prefix, String ns) {
+        ((LinkedList<Map<String, String>>)namespaces).getFirst().put(prefix, ns);
+         ((LinkedList<Map<String, String>>)prefixes).getFirst().put(ns, prefix);
     }
     
-    public String findUniquePrefix(String namespace) {
-        if (namespace.length() == 0) {
+    public String findUniquePrefix(String ns) {
+        if (ns.length() == 0) {
             return null;
         }
-        String existingPrefix = prefixes.get(0).get(namespace);
+        String existingPrefix = getPrefix(ns);
         if (existingPrefix != null) {
             return existingPrefix;
         }
         
         int i = 0;
         while (true) {
-            if (!prefixes.get(0).containsValue("ps" + ++i)) {
-                String prefix = "ps" + i;
-                addPrefix(prefix, namespace);
+            String prefix = "ps" + ++i;
+            if (getNamespaceURI(prefix) == null) {
+                addPrefix(prefix, ns);
                 return prefix;
             }
         }
     }
     
     public String getNamespaceURI(String prefix) {
-        for (Map.Entry<String, String> entry : prefixes.get(0).entrySet()) {
-            if (entry.getValue().equals(prefix)) {
-                return entry.getKey();
+        if (!namespaces.isEmpty()) {
+            Map<String, String> cache = ((LinkedList<Map<String, String>>)namespaces).getFirst();
+            for (Map<String, String> nss : namespaces) {
+                String ns = nss.get(prefix);
+                if (ns != null) {
+                    cache.put(prefix, ns);
+                    return ns;
+                }
             }
+        }
+        if (XMLConstants.XML_NS_PREFIX.equals(prefix)) {
+            return XMLConstants.XML_NS_URI;
+        } else if (XMLConstants.XMLNS_ATTRIBUTE.equals(prefix)) {
+            return XMLConstants.XMLNS_ATTRIBUTE_NS_URI;
         }
         String ns = nc.getNamespaceURI(prefix);
         if (ns != null && ns.length() > 0) {
@@ -94,20 +105,42 @@ class DelegatingNamespaceContext implements NamespaceContext {
         if (value != null && value.length() == 0) {
             return null;
         }
-        
-        String actualNs = value == null ? ns : value;
-        if (prefixes.get(0).containsKey(actualNs)) {
-            return prefixes.get(0).get(actualNs);
+        if (value != null) {
+            ns = value;
         }
-        String prefix = nc.getPrefix(actualNs);
+        
+        if (!prefixes.isEmpty()) {
+            Map<String, String> cache = ((LinkedList<Map<String, String>>)prefixes).getFirst();
+            for (Map<String, String> pfs : prefixes) {
+                String prefix = pfs.get(ns);
+                if (prefix != null && ns.equals(getNamespaceURI(prefix))) {
+                    cache.put(ns, prefix);
+                    return prefix;
+                }
+            }
+        }
+        if (XMLConstants.XML_NS_URI.equals(ns)) {
+            return XMLConstants.XML_NS_PREFIX;
+        } else if (XMLConstants.XMLNS_ATTRIBUTE_NS_URI.equals(ns)) {
+            return XMLConstants.XMLNS_ATTRIBUTE;
+        }
+        
+        String prefix = nc.getPrefix(ns);
         if (prefix != null) {
-            addPrefix(prefix, actualNs);
+            addPrefix(prefix, ns);
         }
         return prefix;
     }
 
-    public Iterator getPrefixes(String ns) {
-        return nc.getPrefixes(ns);
+    public Iterator<String> getPrefixes(String ns) {
+        List<String> pl = new LinkedList<String>();
+        for (Map<String, String> pfs : prefixes) {
+            String pf = pfs.get(ns);
+            if (pf != null && ns.equals(getNamespaceURI(pf))) {
+                pl.add(pf);
+            }
+        }
+        return pl.iterator();
     }
     
 }
